# nexus-local-ai-workbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  generate_dashboard.py  index.html  package-lock.json  package.json  tsconfig.test.json  watch_dashboard.py
.codex/environments/: environment.toml
.github/: pull_request_template.md
docs/: agent-interaction-bridge.md  architecture.md  audit-log.md  distribution.md  legacy-retirement-audit.md  local-automation-hooks.md  local-search-index.md  mac-app-implementation.md  main-workflow-audit.zh-CN.md  main-workflow.md  native-architecture.md  native-release-notes-and-updater.md  native-swift-only-roadmap.md  product-shape.zh-CN.md  release-process.md
script/: build_and_run.sh  install_native_app.sh  stage_native_app.sh
scripts/: check-dashboard-samples.mjs  check-dev-environment.mjs  check-public-data.mjs  generate-icon.mjs  generate-release-notes.mjs  nexus-agent-bridge-server.mjs  nexus-agent-event.mjs  prepare-release-notes.mjs  run-tests.mjs
src/: App.tsx  desktop.ts  lib.ts  styles.css  types.ts  workspace-model.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: agent-bridge-server.test.mjs  agent-hook-helper.test.mjs  check-dashboard-samples.test.mjs  check-dev-environment.test.mjs  check-public-data.test.mjs  generate-release-notes.test.mjs  native-verification-policy.test.mjs  prepare-release-notes.test.mjs  workspace-model.test.mjs
widget/: README.md
(+152 files in other folders)
